--- a/learning_typescript/index.html
+++ b/learning_typescript/index.html
@@ -4,28 +4,46 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./index.css">
     <title>Learning TypeScript</title>
   </head>
   <body>
-    <div class="container">
+    <div class="zebra hero">
         <div class="logo">
             <img src="./packt-logo.svg"/>
         </div>
         <div class="row">
             <div class="col-sm">
-                <h1>Learning TypeScript 2x</h1>
-                <h3>
+                <h1>Learning TypeScript 2.x</h1>
+                <p>by Remo H. Jansen</p>
+                <h2>
                     Exploit the features of TypeScript to develop and maintain
                     captivating web applications with ease
-                </h3>
-                <p>
-                    This book is a step-by-step guide that will get you started with TypeScript with the help of practical examples. You start off by understanding the basics and the new features of TypeScript 2.x. Next, you will learn to automate your development workflow with tools such as Grunt. Following this, you will be explained in detail about function, generics, and callbacks. Post this, object-oriented features and the memory management functionality of TypeScript are explained in detail. Going forward, you will be introduced to Functional Programming with TypeScript and will delve into Asynchronous programming principles. Finally, you will be introduced to the performance parameters and will learn to test your application.
-                </p>
-                <p>
-                    By the end of this book, you will have learned enough to implement all the concepts with the latest features of TypeScript to build a single page application from scratch.
-                </p>
+                </h2>
+                <br/>
+                <br/>
+                <h3>Order now</h3>
+                <button type="button" class="btn btn-warning">
+                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                    Amazon UK
+                </button>
+                <button type="button" class="btn btn-warning">
+                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                    Amazon US
+                </button>
+                <button type="button" class="btn btn-warning">
+                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                    PacktPub
+                </button>
+                <button type="button" class="btn btn-warning">
+                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                    Google
+                </button>
+                <button type="button" class="btn btn-warning">
+                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                    Kobo
+                </button>
             </div>
             <div class="col-sm">
                 <div class="libro">
@@ -35,32 +53,59 @@
             </div>
         </div>
     </div>
-    <div class="zebra dark">
-        <p>
-            Remo H. Jansen is a Microsof MVP, web development engineer, open source 
-            contributor, entrepreneur, technology lover, gamer, and Internet enthusiast.
-            He is originally from Seville, Spain, but currently lives in Dublin, Ireland, 
-            where he has a full-time job in the financial aviation finance industry.
-        </p>
-        <p>
-            Remo is the author of InversifyJS and has been working on large-scale
-            JavaScript applications for the last few years, from flight booking
-            engines to investment management solutions.He is an active member of
-            the TypeScript community, he is organizer of the Dublin TypeScript
-            and Dublin Open Source meetups.
-        </p>
-        <p>
-            Remo has previously worked as co-author of TypeScript: Modern
-            JavaScript Development and as technical reviewer on Mastering
-            TypeScript written by Nathan Rozentals. Both titles are published
-            by Packt Publishing.
-        </p>
-        <p>
-            You can learn more about him at his personal website www.remojansen.com
-            or his Twitter account @RemoHJansen
-        </p>
+    <div class="zebra gray">
+        <div class="title">About the book</div>
+        <div>
+            <p>
+                This book is a step-by-step guide that will get you started with TypeScript with the help of practical examples. You start off by understanding the basics and the new features of TypeScript 2.x. Next, you will learn to automate your development workflow with tools such as Grunt. Following this, you will be explained in detail about function, generics, and callbacks. Post this, object-oriented features and the memory management functionality of TypeScript are explained in detail. Going forward, you will be introduced to Functional Programming with TypeScript and will delve into Asynchronous programming principles. Finally, you will be introduced to the performance parameters and will learn to test your application.
+            </p>
+            <p>
+                By the end of this book, you will have learned enough to implement all the concepts with the latest features of TypeScript to build a single page application from scratch.
+            </p>
+        </div>
     </div>
-    <i class="material-icons">face</i>
+    <div class="zebra dark">
+        <div class="title">About Remo H. Jansen</div>
+        <div class="row">
+            <div class="col-sm">
+                <p>
+                    Remo H. Jansen is a Microsof MVP, web development engineer, open source 
+                    contributor, entrepreneur, technology lover, gamer, and Internet enthusiast.
+                    He is originally from Seville, Spain, but currently lives in Dublin, Ireland, 
+                    where he has a full-time job in the financial aviation finance industry.
+                </p>
+                <p>
+                    Remo is the author of InversifyJS and has been working on large-scale
+                    JavaScript applications for the last few years, from flight booking
+                    engines to investment management solutions.He is an active member of
+                    the TypeScript community, he is organizer of the Dublin TypeScript
+                    and Dublin Open Source meetups.
+                </p>
+                <p>
+                    Remo has previously worked as co-author of TypeScript: Modern
+                    JavaScript Development and as technical reviewer on Mastering
+                    TypeScript written by Nathan Rozentals. Both titles are published
+                    by Packt Publishing.
+                </p>
+                <p>
+                    More from Remo:
+                </p> 
+                <ul>
+                    <li><i class="fa fa-globe" aria-hidden="true"></i> www.remojansen.com</li>
+                    <li><i class="fa fa-twitter" aria-hidden="true"></i> @RemoHJansen</li>
+                </ul>
+            </div>
+            <div class="col-sm">
+                <img src="http://www.remojansen.com/website/assets/me.png" />
+            </div>
+        </div>
+    </div>
+    <div class="zebra gray">
+        <div class="title">Reviews</div>
+    </div>
+    <div class="zebra">
+        <div class="title">Other books by Remo H. Jansen</div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
