--- a/learning_typescript/index.html
+++ b/learning_typescript/index.html
@@ -6,44 +6,39 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./index.css">
-    <title>Learning TypeScript</title>
+    <title>Learning TypeScript - Book by Remo H. Jansen</title>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
-    <div class="zebra hero">
-        <div class="logo">
-            <img src="./packt-logo.svg"/>
-        </div>
+    <div class="zebra gray hero">
         <div class="row">
             <div class="col-sm">
-                <h1>Learning TypeScript 2.x</h1>
-                <p>by Remo H. Jansen</p>
-                <h2>
-                    Exploit the features of TypeScript to develop and maintain
-                    captivating web applications with ease
-                </h2>
+                <h1 class="main-title">Learning TypeScript 2.x</h1>
+                <h2>Second Edition</h2>
+                <h5>by Remo H. Jansen</h5>
                 <br/>
                 <br/>
-                <h3>Order now</h3>
-                <button type="button" class="btn btn-warning">
+                <br/>
+                <br/>
+                <h3>Order now!</h3>
+                <br/>
+                <a class="btn btn-danger" href="https://www.amazon.co.uk/Learning-TypeScript-2-x-Remo-Jansen/dp/1788391470/">
                     <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                     Amazon UK
-                </button>
-                <button type="button" class="btn btn-warning">
+                </a>
+                <a class="btn btn-danger" href="https://www.amazon.com/Learning-TypeScript-2-x-Remo-Jansen/dp/1788391470/">
                     <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                     Amazon US
-                </button>
-                <button type="button" class="btn btn-warning">
+                </a>
+                <a class="btn btn-danger" href="https://www.packtpub.com/application-development/learning-typescript-2x-second-edition">
                     <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                     PacktPub
-                </button>
-                <button type="button" class="btn btn-warning">
-                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                    Google
-                </button>
-                <button type="button" class="btn btn-warning">
+                </a>
+                <a class="btn btn-danger" href="https://www.kobo.com/ie/en/ebook/learning-typescript-2-x-second-edition">
                     <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                     Kobo
-                </button>
+                </a>
             </div>
             <div class="col-sm">
                 <div class="libro">
@@ -53,23 +48,155 @@
             </div>
         </div>
     </div>
-    <div class="zebra gray">
+    <div class="zebra">
         <div class="title">About the book</div>
-        <div>
-            <p>
-                This book is a step-by-step guide that will get you started with TypeScript with the help of practical examples. You start off by understanding the basics and the new features of TypeScript 2.x. Next, you will learn to automate your development workflow with tools such as Grunt. Following this, you will be explained in detail about function, generics, and callbacks. Post this, object-oriented features and the memory management functionality of TypeScript are explained in detail. Going forward, you will be introduced to Functional Programming with TypeScript and will delve into Asynchronous programming principles. Finally, you will be introduced to the performance parameters and will learn to test your application.
-            </p>
-            <p>
-                By the end of this book, you will have learned enough to implement all the concepts with the latest features of TypeScript to build a single page application from scratch.
-            </p>
+        <p>
+            This book is a step-by-step guide that will get you started with TypeScript with the help of practical examples. You start off by understanding the basics and the new features of TypeScript 2.x. Next, you will learn to automate your development workflow with tools such as Grunt. Following this, you will be explained in detail about function, generics, and callbacks. Post this, object-oriented features and the memory management functionality of TypeScript are explained in detail. Going forward, you will be introduced to Functional Programming with TypeScript and will delve into Asynchronous programming principles. Finally, you will be introduced to the performance parameters and will learn to test your application.
+        </p>
+        <p>
+            By the end of this book, you will have learned enough to implement all the concepts with the latest features of TypeScript to build a single page application from scratch.
+        </p>
+        <br/>
+        <br/>
+        <div class="row">
+            <div class="col-sm-5 offset-sm-1">
+                <ul class="contents">
+                    <li>
+                        <h4>Chapter 1: Introducting TypeScript</h4>
+                        <p>
+                            Get familiar with the TypeScript basics.
+                            This chapter explores the purpose, main features
+                            and benefits of the TypeScript programming language.
+                        </p>
+                    </li>
+                    <li>
+                        <h4>Chapter 3: Working with functions</h4>
+                        <p>
+                            Learn how to work with functions in depth. This chapter
+                            will teach you how to take adventage of the power of 
+                            functions and asynchronous programming in TypeScript.
+                        </p>
+                    </li>
+                    <li>
+                        <h4>Chapter 5: Working with dependencies</h4>
+                        <p>
+                            Learn how to work with application dependencies
+                            and third party dependencies as well as type definitions.
+                            This chapter explores multiple module systems such as
+                            CommonJS or ES6 modules and concepts like dependey
+                            injection.
+                        </p>
+                    </li>
+                    <li>
+                        <h4>Chapter 7: Functional Programming with TypeScript</h4>
+                        <p>
+                            Learn the core building blocks of the functional
+                            programing paradigm, including concepts such us
+                            function composition, function partial application
+                            or referential transparency.
+                        </p>
+                    </li>
+                    <li>
+                        <h4>Chapter 9: Automating your development workflow</h4>
+                        <p>
+                            Learn how to automate certain task of your development
+                            workflow and reduce the number of integration issues
+                            using tools such as TsLint, Webpack, Gulp and npm scripts.
+                        </p>
+                    </li>
+                    <li>
+                        <h4>Chapter 11: Application testing</h4>
+                        <p>
+                            Learn how to implement automated tests like unit
+                            tests or end-to-end test powered by tools such as
+                            Mocha, Chai, Sinon, Supertest and Karma.
+                        </p>
+                    </li>
+                    <li>
+                        <h4>Chapter 13: Backend development with Node.js and TypeScript</h4>
+                        <p>
+                            Learn how to develop RESTful APIs
+                            powered by Node.js and TypeScript.
+                        </p>
+                    </li>
+                    <li>
+                        <h4>Chapter 15: Frontend development with React and TypeScript</h4>
+                        <p>
+                            Learn how to develop single-page web
+                            applications powered by React and TypeScript.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-sm-5">
+                <ul class="contents">
+                    <li>
+                        <h4>Chapter 2: Working with types</h4>
+                        <p>
+                            Learn how to make the most out of the TyeScript type anotations
+                            and its type inferance system. This chapter will teach you how
+                            to use powerul features shuch as union types or mapped types.
+                        </p>
+                    </li>
+                    <li>
+                        <h4>Chapter 4: Object-Oriented Programming with TypeScript</h4>
+                        <p>
+                            Learn the core concepts of the Object-Oriented Programming (OOP)
+                            paradigm shuch us polimorfisim, inheritance or encapsulation.
+                            This chapter also explores some OOP best practices shuch as
+                            the SOLID principles.
+                        </p>
+                    </li>
+                    <li>
+                        <h4>Chapter 6: Understanding the runtime</h4>
+                        <p>
+                            Learn how the JavaScript runtime works and gain
+                            a good understanding of concepts such us the event
+                            loop, closures r hoisting.
+                        </p>
+                    </li>
+                    <li>
+                        <h4>Chapter 8: Working with decorators</h4>
+                        <p>
+                            Learn how to cosume or declare decorators and how
+                            to use the decorators to create and read metadata
+                            that can be used to power tools such as testing
+                            frameworks or inversion of control containers.
+                        </p>
+                    </li>
+                    <li>
+                        <h4>Chapter 10: Application performance</h4>
+                        <p>
+                            Learn how the availablility of resources can affect
+                            the performance of a TypeScript application and how to
+                            use the Node.js inspector and the Chrome Development
+                            tools to analyze the performance of a TypeScript application.  
+                        </p>
+                    </li>
+                    <li>
+                        <h4>Chapter 12: The TypeScript language services</h4>
+                        <p>
+                            Learn how to leverage the TypeScript language
+                            services to create your own developent tools.
+                        </p>
+                    </li>
+                    <li>
+                        <h4>Chapter 14: Frontend development with Angular and TypeScript</h4>
+                        <p>
+                            Learn how to develop single-page web
+                            applications powered by Angular and TypeScript.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="zebra dark">
         <div class="title">About Remo H. Jansen</div>
         <div class="row">
-            <div class="col-sm">
+            <div class="col-sm-7">
                 <p>
-                    Remo H. Jansen is a Microsof MVP, web development engineer, open source 
+                    Remo H. Jansen is a Microsof MVP, fullstack JavaScript and TypeScript ninja, open source 
                     contributor, entrepreneur, technology lover, gamer, and Internet enthusiast.
                     He is originally from Seville, Spain, but currently lives in Dublin, Ireland, 
                     where he has a full-time job in the financial aviation finance industry.
@@ -91,20 +218,105 @@
                     More from Remo:
                 </p> 
                 <ul>
-                    <li><i class="fa fa-globe" aria-hidden="true"></i> www.remojansen.com</li>
-                    <li><i class="fa fa-twitter" aria-hidden="true"></i> @RemoHJansen</li>
+                    <li>
+                        <a href="http://www.remojansen.com">
+                            <i class="fa fa-globe" aria-hidden="true"></i>
+                            www.remojansen.com
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/RemoHJansen">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                            twitter.com/RemoHJansen
+                        </a>
+                    </li>
                 </ul>
             </div>
-            <div class="col-sm">
-                <img src="http://www.remojansen.com/website/assets/me.png" />
+            <div class="col-sm-5">
+                <img class="profile" src="http://www.remojansen.com/website/assets/me.png" />
             </div>
         </div>
     </div>
     <div class="zebra gray">
         <div class="title">Reviews</div>
+        <div class="row">
+            <div class="col-sm">
+                <div class="quote">
+                    <p>
+                        This is an amazing book not to mention the only one
+                        that covers the latest version of typescript. It goes
+                        beyond typescript and explains many important
+                        concept in object-oriented programming and JavaScript.
+                    </p>
+                </div>
+                <div class="quote">
+                    <p>
+                        I am a senior JavaScript developer and developed in
+                        action script 3 for many years so typing was not
+                        something new to me, but I was still able to pick up
+                        a lot of good information such as generators reflection
+                        and more.
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm">
+                <p class="quote">
+                    Don't walk but run and get this book! TypeScript is
+                    without a doubt the future of JavaScript. You will
+                    learn how to bring structure to Javascript to ease
+                    your development with making large scale applications.
+                </p>
+                <p class="quote">
+                    The author wastes no time introducing the core features
+                    of TypeScript to automating your workflow with automation
+                    tools like Gulp. Any javascript developer would benefit
+                    from this book.
+                </p>
+                <p class="quote">
+                    WOW! I picked this book up using my Packt subscription and
+                    can't put it down. The material flows and is easy to follow
+                    along with, I never used Typescript before but found it
+                    EXTREMELY USEFUL in web application development.
+                </p>
+            </div>
+        </div>
     </div>
-    <div class="zebra">
-        <div class="title">Other books by Remo H. Jansen</div>
+    <div class="zebra center">
+        <div class="title">Order Now</div>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua.
+        </p>
+        <br/>
+        <div class="libro">
+            <span></span>
+            <img src="https://www.packtpub.com/sites/default/files/B08005_MockupCover.png" alt="" />
+        </div>
+        <br/>
+        <br/>
+        <br/>
+        <a class="btn btn-danger" href="https://www.amazon.co.uk/Learning-TypeScript-2-x-Remo-Jansen/dp/1788391470/">
+            <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+            Amazon UK
+        </a>
+        <a class="btn btn-danger" href="https://www.amazon.com/Learning-TypeScript-2-x-Remo-Jansen/dp/1788391470/">
+            <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+            Amazon US
+        </a>
+        <a class="btn btn-danger" href="https://www.packtpub.com/application-development/learning-typescript-2x-second-edition">
+            <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+            PacktPub
+        </a>
+        <a class="btn btn-danger" href="https://www.kobo.com/ie/en/ebook/learning-typescript-2-x-second-edition">
+            <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+            Kobo
+        </a>
+    </div>
+    <div class="center">
+        <p>
+            &copy; 2018 Remo H. Jansen. All Rights Reserved.
+        </p>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
