--- a/learning_typescript/index.html
+++ b/learning_typescript/index.html
@@ -258,26 +258,32 @@
                         and more.
                     </p>
                 </div>
+                <div class="quote">
+                    <p>
+                        Don't walk but run and get this book! TypeScript is
+                        without a doubt the future of JavaScript. You will
+                        learn how to bring structure to Javascript to ease
+                        your development with making large scale applications.
+                    </p>
+                </div>
             </div>
             <div class="col-sm">
-                <p class="quote">
-                    Don't walk but run and get this book! TypeScript is
-                    without a doubt the future of JavaScript. You will
-                    learn how to bring structure to Javascript to ease
-                    your development with making large scale applications.
-                </p>
-                <p class="quote">
-                    The author wastes no time introducing the core features
-                    of TypeScript to automating your workflow with automation
-                    tools like Gulp. Any javascript developer would benefit
-                    from this book.
-                </p>
-                <p class="quote">
-                    WOW! I picked this book up using my Packt subscription and
-                    can't put it down. The material flows and is easy to follow
-                    along with, I never used Typescript before but found it
-                    EXTREMELY USEFUL in web application development.
-                </p>
+                <div class="quote">
+                    <p>
+                        The author wastes no time introducing the core features
+                        of TypeScript to automating your workflow with automation
+                        tools like Gulp. Any javascript developer would benefit
+                        from this book.
+                    </p>
+                </div>
+                <div class="quote">
+                    <p>
+                        WOW! I picked this book up using my Packt subscription and
+                        can't put it down. The material flows and is easy to follow
+                        along with, I never used Typescript before but found it
+                        EXTREMELY USEFUL in web application development.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
