--- a/learning_typescript/index.html
+++ b/learning_typescript/index.html
@@ -198,21 +198,23 @@
                 <p>
                     Remo H. Jansen is a Microsof MVP, fullstack JavaScript and TypeScript ninja, open source 
                     contributor, entrepreneur, technology lover, gamer, and Internet enthusiast.
-                    He is originally from Seville, Spain, but currently lives in Dublin, Ireland, 
-                    where he has a full-time job in the financial aviation finance industry.
+                    Remo is originally from Seville, Spain, but currently lives in Dublin, Ireland, 
+                    where he has a full-time job in the aviation finance industry.
                 </p>
                 <p>
                     Remo is the author of InversifyJS and has been working on large-scale
                     JavaScript applications for the last few years, from flight booking
-                    engines to investment management solutions.He is an active member of
-                    the TypeScript community, he is organizer of the Dublin TypeScript
+                    engines to investment management solutions. Remo is an active member 
+                    of the TypeScript community, he is organizer of the Dublin TypeScript
                     and Dublin Open Source meetups.
                 </p>
                 <p>
-                    Remo has previously worked as co-author of TypeScript: Modern
-                    JavaScript Development and as technical reviewer on Mastering
-                    TypeScript written by Nathan Rozentals. Both titles are published
-                    by Packt Publishing.
+                    Remo has previously worked on other Packt Publishing titles:
+                </p>
+                <p class="publications">
+                    - Co-author (2016). TypeScript: Modern JavaScript Development ISBN 9781787289086<br/>
+                    - Author (2015). Learning TypeScript ISBN 9781783985548<br/>
+                    - Technical reviewer (2015). Mastering TypeScript ISBN 9781784399665<br/>
                 </p>
                 <p>
                     More from Remo:
